--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <div class="icon-block">
                             <h2 class="center grey-text text-darken-3"><i class="material-icons">gamepad</i></h2>
                             <h5 class="center grey-text text-darken-3">Win Fabulous Prizes</h5>
-                            <p>hackNEHS is a competition were teams work together to build amazing software using many tools, APIs, and products. At the end of the event, judges will will provide feedback and prizes to the best hacks, which could possibly include cool drones, arduino kits, and other hot technolgies of the modern era. However, everyone is a winner, and we will pass out wonderful goodies and t-shirts to everyone who participates.</p>
+                            <p>hackNEHS is a competition where teams work together to build amazing software using many tools, APIs, and products. At the end of the event, judges will provide feedback and prizes to the best hacks, which could possibly include cool drones, arduino kits, and other hot technolgies of the modern era. However, everyone is a winner, and we will pass out wonderful goodies and t-shirts to everyone who participates.</p>
                         </div>
                     </div>
                 </div>
@@ -170,7 +170,7 @@
                     <div class="col-sm-12 col-md-6 col-lg-6">
                         <div class="card blue-grey hoverable">
                             <div class="card-content white-text"> <span class="card-title orange-text">What should I bring?</span>
-                                <p>A computer, its charger, and a valid school ID are all you need. Pillows and warm clothing are recommended. Attendance is completely free, and food, drinks, power strips, and wi-fi will be provided!</p>
+                                <p>You only need to bring your computer, a charger, a valid government-issued or school ID, and your signed liabilty form. Attendance is completely free, and food, drinks, power strips, and wi-fi will be provided!</p>
                             </div>
                         </div>
                     </div>
@@ -202,7 +202,7 @@
                     <div class="col-sm-12 col-md-6 col-lg-6">
                         <div class="card blue-grey hoverable">
                             <div class="card-content white-text"> <span class="card-title orange-text">How will I get there?</span>
-                                <p>Get your friends from school to drive or carpool! Since we are in Cambridge, you can also explore public transportation options.</p>
+                                <p>Find some friends to drive or carpool with! You can also take public transportation to the Kendall/MIT stop on the Red Line. We are located at 1 Cambridge Center, Cambridge, MA<a href="https://goo.gl/maps/qgCVmd7kmXn" target="_blank" class="right">Google Maps</a></p>
                             </div>
                         </div>
                     </div>
@@ -481,9 +481,9 @@
                 <div>
                     <blockquote>
                         <h5 class="col s12 grey-text text-darken-3 light">
-                        
+
                             We are a group of passionate high school students who love computer science and want to bring together like-minded students to brainstorm innovative ideas. With computer science and hackathons becoming more popular around the globe, we want to join the revolution and promote computer science within our communities.
-                      
+
                 </h5> </blockquote>
                 </div>
                 <div class="row">
@@ -533,7 +533,7 @@
                     </div>
                     <!--
                     <div class="carousel"> <a class="carousel-item modal-trigger" href="#andrew"><h5 class="center light black-text">Andrew Wang</h5><img src="assets/andrew.jpeg"></a> <a class="carousel-item modal-trigger" href="#kevin"><h5 class="center light black-text">Kevin Sun</h5><img src="assets/about_kevin.jpg"></a> <a class="carousel-item modal-trigger" href="#alec"><h5 class="center light black-text">Alec Sun</h5><img src="assets/alec.png"></a><a class="carousel-item modal-trigger" href="#vinjai"><h5 class="center light black-text">Vinjai Vale</h5><img src="assets/vinjai.jpg"></a> </div>
-                     Modal Structure 
+                     Modal Structure
                     <div id="andrew" class="modal">
                         <div class="modal-content">
                             <h4 class="orange-text">Andrew Wang</h4>
@@ -600,7 +600,7 @@
             </div>
         </div>
         <div class="footer-copyright">
-            <div class="container"> © 2016 hackNEHS | Made with <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a> <a href="#home" class="waves-effect waves-light blue-grey right 
+            <div class="container"> © 2016 hackNEHS | Made with <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a> <a href="#home" class="waves-effect waves-light blue-grey right
                                    btn-large"><i class="fa fa-chevron-up"></i> To Top</a> </div>
         </div>
     </footer>
