Minor banner changes

--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
         <nav class="blue-grey-transparent">
             <div class="nav-wrapper"> <a href="#" data-activates="mobile-demo" class="button-collapse" style="margin-left: 10px"><i class="material-icons">menu</i></a>
                 <ul id="myNavbarLeft" class="left hide-on-small-and-down">
-<!--                    <li class="light" style="margin-left: 15px"><a href="#home" id="hacknehs-logo-text"><span style="color:#424242"><b class="light">hack</b></span><span style="color:#ff9800"><b class="light">NEHS</b></span></a></li>-->
-                    <li class="light"><a href="#"><img src="assets/banner-logo.png" style="height: 40px; vertical-align: middle"></a></li>
+                    <!--                    <li class="light" style="margin-left: 15px"><a href="#home" id="hacknehs-logo-text"><span style="color:#424242"><b class="light">hack</b></span><span style="color:#ff9800"><b class="light">NEHS</b></span></a></li>-->
+                    <li class="light">
+                        <a href="#"><img src="assets/logo2.png" style="height: 40px; vertical-align: middle"></a>
+                    </li>
                     <li class="light"><a href="#welcome">Welcome</a></li>
                     <li class="light"><a href="#about">About</a></li>
                     <li class="light"><a href="#faq">FAQ</a></li>
@@ -45,7 +47,9 @@
                     <li class="light"><a target="_blank" href="https://github.com/hackNEHS"><i class="fa fa-github"></i> Github</a></li>
                 </ul>
                 <ul class="side-nav" id="mobile-demo">
-                     <li class="light center"><a href="#"><img src="assets/banner-logo.png" style="height: 40px; vertical-align: middle"></a></li>
+                    <li class="light center">
+                        <a href="#"><img src="assets/logo2.png" style="height: 40px; vertical-align: middle"></a>
+                    </li>
                     <li class="light"><a href="#welcome">Welcome</a></li>
                     <li class="light"><a href="#about">About</a></li>
                     <li class="light"><a href="#faq">FAQ</a></li>
@@ -65,18 +69,15 @@
     <div id="main-content">
         <!-- home -->
         <section id="home" class="scrollspy" style="height: 800px">
-            <div class="row center">
-                <img id="hacknehs-logo-img" src="assets/logo2.png" style="height: 150px; margin-top: 150px">
-                    <h3 class="orange-text">hackNEHS</h3>
-                    <h5 class="light white-text">October 8, 2016</h5>
-                    <h5 class="light white-text">1 Cambridge Center</h5>
-                    <h5 class="light white-text">200+ Hackers</h5>
-                    <br>
-                    <br>
-                    <div class="row center"> <a href="#participants" target="_blank" class="waves-effect waves-light blue-grey btn-large"><i class="material-icons left">send</i><b class="light">Register</b></a> <a href="#mentors" class="waves-effect waves-light blue-grey btn-large"><i class="material-icons left">perm_identity</i><b class="light">Mentor</b></a> <a href="#sponsors" target="_blank" class="waves-effect waves-light blue-grey btn-large"><i class="material-icons left">thumb_up</i><b class="light">Sponsor</b></a> </div>
-                    <br>
-                    <br>
-            </div>
+            <div class="row center"> <img src="assets/banner-logo.png" style="height: 200px; margin-top: 150px">
+                <h5 class="light white-text">October 8, 2016</h5>
+                <h5 class="light white-text">1 Cambridge Center</h5>
+                <h5 class="light white-text">200+ Hackers</h5>
+                <br>
+                <br>
+                <div class="row center"> <a href="#participants" target="_blank" class="waves-effect waves-light blue-grey btn-large"><i class="material-icons left">send</i><b class="light">Register</b></a> <a href="#mentors" class="waves-effect waves-light blue-grey btn-large"><i class="material-icons left">perm_identity</i><b class="light">Mentor</b></a> <a href="#sponsors" target="_blank" class="waves-effect waves-light blue-grey btn-large"><i class="material-icons left">thumb_up</i><b class="light">Sponsor</b></a> </div>
+                <br>
+                <br> </div>
         </section>
         <!-- welcome -->
         <section id="welcome" class="scrollspy hacknehs-welcome-container">
