added social media and jocelyn

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                 <ul id="myNavbarRight" class="right hide-on-med-and-down">
                     <li><a class="light" href="mailto:info@hacknehs.com"><i class="fa fa-envelope"></i> Email</a></li>
                     <li class="light"><a target="_blank" href="https://www.facebook.com/hacknehs/"><i class="fa fa-facebook-official"></i> Facebook</a></li>
-                    <li class="light"><a target="_blank" href="https://twitter.com/?lang=en"><i class="fa fa-twitter"></i> Twitter</a></li>
+                    <li class="light"><a target="_blank" href="https://twitter.com/hackNEHS"><i class="fa fa-twitter"></i> Twitter</a></li>
                     <li class="light"><a target="_blank" href="https://www.instagram.com/hacknehs/"><i class="fa fa-instagram"></i> Instagram</a></li>
-                    <li class="light"><a target="_blank" href="https://github.com/hackNEHS"><i class="fa fa-github"></i> Github</a></li>
+                    <li class="light"><a target="_blank" href="https://medium.com/hacknehs"><i class="fa fa-comment"></i> Medium</a></li>
                 </ul>
                 <ul class="side-nav" id="mobile-demo">
                     <li class="light center">
@@ -59,9 +59,9 @@
                     <li class="light"><a href="#team">Team</a></li>
                     <li><a class="light" href="mailto:info@hacknehs.com"><i class="fa fa-envelope"></i> Email</a></li>
                     <li class="light"><a target="_blank" href="https://www.facebook.com/hacknehs/"><i class="fa fa-facebook-official"></i> Facebook</a></li>
-                    <li class="light"><a target="_blank" href="https://twitter.com/?lang=en"><i class="fa fa-twitter"></i> Twitter</a></li>
+                    <li class="light"><a target="_blank" href="https://twitter.com/hackNEHS"><i class="fa fa-twitter"></i> Twitter</a></li>
                     <li class="light"><a target="_blank" href="https://www.instagram.com/hacknehs/"><i class="fa fa-instagram"></i> Instagram</a></li>
-                    <li class="light"><a target="_blank" href="https://github.com/hackNEHS"><i class="fa fa-github"></i> Github</a></li>
+                    <li class="light"><a target="_blank" href="https://medium.com/hacknehs"><i class="fa fa-comment"></i> Medium</a></li>
                 </ul>
             </div>
         </nav>
@@ -532,6 +532,17 @@
                             </div>
                         </div>
                     </div>
+                            <div class="col s12 m6 l4">
+                        <div class="card" style="max-width: 300px">
+                            <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="assets/jocelyn.jpg"> </div>
+                            <div class="card-content"> <span class="card-title activator grey-text text-darken-4">Jocelyn Shen<i class="material-icons right">more_vert</i></span>
+                                <p>Director of Marketing</p>
+                            </div>
+                            <div class="card-reveal"> <span class="card-title grey-text text-darken-4">Alec Sun<i class="material-icons right">close</i></span>
+                                <p>Jocelyn Shen is a 11th grader at Phillips Academy Andover.</p>
+                            </div>
+                        </div>
+                    </div>
                     <!--
                     <div class="carousel"> <a class="carousel-item modal-trigger" href="#andrew"><h5 class="center light black-text">Andrew Wang</h5><img src="assets/andrew.jpeg"></a> <a class="carousel-item modal-trigger" href="#kevin"><h5 class="center light black-text">Kevin Sun</h5><img src="assets/about_kevin.jpg"></a> <a class="carousel-item modal-trigger" href="#alec"><h5 class="center light black-text">Alec Sun</h5><img src="assets/alec.png"></a><a class="carousel-item modal-trigger" href="#vinjai"><h5 class="center light black-text">Vinjai Vale</h5><img src="assets/vinjai.jpg"></a> </div>
                      Modal Structure
@@ -593,9 +604,9 @@
                     <h5 class="white-text">Follow Us</h5>
                     <ul>
                         <li><a target="_blank" class="grey-text text-lighten-3" href="https://www.facebook.com/hacknehs/"><i class="fa fa-facebook-official"></i> Facebook</a></li>
-                        <li><a target="_blank" class="grey-text text-lighten-3" href="https://twitter.com/?lang=en"><i class="fa fa-twitter"></i> Twitter</a></li>
+                        <li><a target="_blank" class="grey-text text-lighten-3" href="https://twitter.com/hackNEHS"><i class="fa fa-twitter"></i> Twitter</a></li>
                         <li><a target="_blank" class="grey-text text-lighten-3" href="https://www.instagram.com/hacknehs/"><i class="fa fa-instagram"></i> Instagram</a></li>
-                        <li><a target="_blank" class="grey-text text-lighten-3" href="https://github.com/hackNEHS"><i class="fa fa-github"></i> Github</a></li>
+                        <li><a target="_blank" class="grey-text text-lighten-3" href="https://medium.com/hacknehs"><i class="fa fa-comment"></i> Medium</a></li>
                     </ul>
                 </div>
             </div>
