--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                                 <p>Co-founder/Co-director</p>
                             </div>
                             <div class="card-reveal"> <span class="card-title grey-text text-darken-4">Andrew Wang<i class="material-icons right">close</i></span>
-                                <p>Andrew Wang is a 11th grader at Phillips Academy Andover.</p>
+                                <p>Andrew Wang is an 11th grader at Phillips Academy Andover.</p>
                             </div>
                         </div>
                     </div>
@@ -506,7 +506,7 @@
                                 <p>Co-founder/Co-director</p>
                             </div>
                             <div class="card-reveal"> <span class="card-title grey-text text-darken-4">Vinjai Vale<i class="material-icons right">close</i></span>
-                                <p>Vinjai Vale is a 11th grader at Phillips Exeter Academy.</p>
+                                <p>Vinjai Vale is an 11th grader at Phillips Exeter Academy.</p>
                             </div>
                         </div>
                     </div>
@@ -517,7 +517,7 @@
                                 <p>Co-founder/Co-director</p>
                             </div>
                             <div class="card-reveal"> <span class="card-title grey-text text-darken-4">Kevin Sun<i class="material-icons right">close</i></span>
-                                <p>Kevin Sun is a 11th grader at Phillips Academy Andover.</p>
+                                <p>Kevin Sun is an 11th grader at Phillips Academy Andover.</p>
                             </div>
                         </div>
                     </div>
@@ -539,7 +539,7 @@
                                 <p>Director of Marketing</p>
                             </div>
                             <div class="card-reveal"> <span class="card-title grey-text text-darken-4">Alec Sun<i class="material-icons right">close</i></span>
-                                <p>Jocelyn Shen is a 11th grader at Phillips Academy Andover.</p>
+                                <p>Jocelyn Shen is an 11th grader at Phillips Academy Andover.</p>
                             </div>
                         </div>
                     </div>
