--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     <div class="col-sm-12 col-md-6 col-lg-6">
                         <div class="card blue-grey hoverable">
                             <div class="card-content white-text"> <span class="card-title orange-text">How will I get there?</span>
-                                <p>Find some friends to drive or carpool with! You can also take public transportation to the Kendall/MIT stop on the Red Line. We are located at 1 Cambridge Center, Cambridge, MA<a href="https://goo.gl/maps/qgCVmd7kmXn" target="_blank" class="right">Google Maps</a></p>
+                                <p>Find some friends to drive or carpool with! You can also take public transportation to the Kendall/MIT stop on the Red Line.<a href="https://goo.gl/maps/qgCVmd7kmXn" target="_blank" class="right">Google Maps</a></p>
                             </div>
                         </div>
                     </div>
@@ -262,7 +262,7 @@
                         <li>
                             <div class="collapsible-header"><i class="material-icons">edit</i>Click me to display participant registration form!</div>
                             <div class="collapsible-body">
-                                <iframe src="https://docs.google.com/forms/d/1m6imoPTlUejk13lNBKgFUJkbSdkIJB4Z7fI_fQYpyQU/viewform?embedded=true" width="100%" height="600px" frameborder="0" marginheight="0" marginwidth="0" style="margin-bottom: 40px; margin-top: 40px">Loading...</iframe>
+                                <iframe src="https://docs.google.com/forms/d/1m6imoPTlUejk13lNBKgFUJkbSdkIJB4Z7fI_fQYpyQU/viewform?embedded=true" width="100%" height="600px" frameborder="0" marginheight="0" marginwidth="0" style="">Loading...</iframe>
                             </div>
                         </li>
                     </ul>
@@ -407,12 +407,12 @@
                 <div class="row center">
                     <h3 class="col s12 light orange-text">Mentor</h3>
                     <h5 class="col s12 grey-text text-darken-3">If you're interested in being a mentor, contact us at <a href="mailto:info@hacknehs.com">info</a> or fill out the mentor form below:</h5> </div>
-                
+         
                     <ul class="collapsible popout" data-collapsible="expandable">
                         <li>
                             <div class="collapsible-header"><i class="material-icons">edit</i>Click me to display mentor registration form!</div>
                             <div class="collapsible-body">
-                                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfY4VDNMpk8wGvgspgEeN9Fw9swNzd-prRMzj25caYdXsQGSA/viewform?embedded=true" width="100%" height="600px" frameborder="0" marginheight="0" marginwidth="0" style="margin-top: 40px">Loading...</iframe>
+                                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfY4VDNMpk8wGvgspgEeN9Fw9swNzd-prRMzj25caYdXsQGSA/viewform?embedded=true" width="100%" height="600px" frameborder="0" marginheight="0" marginwidth="0" style="">Loading...</iframe>
                             </div>
                         </li>
                     </ul>
