--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                 <div class="row">
                     <div class="col l6 m12">
                         <div class="card">
-                            <div class="card-image waves-effect waves-block waves-light" style="padding: 20px"> <img class="activator" src="assets/tang.png"> </div>
+                            <div class="card-image waves-effect waves-block waves-light" style="padding: 10px"> <img class="activator" src="assets/tang.png"> </div>
                             <div class="card-reveal"> <span class="card-title grey-text text-darken-4">Tang Institute<i class="material-icons right">close</i></span>
                                 <p>Checkout their website <a href="http://tanginstitute.andover.edu/" target="_blank">here</a>.</p>
                             </div>
@@ -460,6 +460,14 @@
                             <div class="card-image waves-effect waves-block waves-light" style="padding: 30px"> <img class="activator" src="assets/deshaw.jpg"> </div>
                             <div class="card-reveal"> <span class="card-title grey-text text-darken-4">D. E. Shaw &#38; Co.<i class="material-icons right">close</i></span>
                                 <p>Checkout their website <a href="https://www.deshaw.com/" target="_blank">here</a>.</p>
+                            </div>
+                        </div>
+                    </div>
+                              <div class="col l6 m12">
+                        <div class="card">
+                            <div class="card-image waves-effect waves-block waves-light" style=""> <img class="activator" src="assets/liberty.jpg"> </div>
+                            <div class="card-reveal"> <span class="card-title grey-text text-darken-4">Liberty Mutual<i class="material-icons right">close</i></span>
+                                <p>Checkout their website <a href="https://www.libertymutual.com/" target="_blank">here</a>.</p>
                             </div>
                         </div>
                     </div>
