Added chipotle and sponsr.us

--- a/index.html
+++ b/index.html
@@ -424,7 +424,11 @@
                     <h5 class="col s12 grey-text text-darken-3"> Check out our sponsorship packet here: <a href="assets/sponsorship.pdf" target="_blank">hackNEHS Sponsorship Packet</a></h5> </div>
                 <h4 class="col s12 light white-text center">Our Partners</h4>
                 <div class="row">
-                    <div class="col l6 m12">
+             
+                </div>
+                <h4 class="col s12 light white-text center">Our Sponsors</h4>
+                <div class="row">
+                           <div class="col l6 m12">
                         <div class="card">
                             <div class="card-image waves-effect waves-block waves-light" style=""> <img class="activator" src="assets/microsoft.png"> </div>
                             <div class="card-reveal"> <span class="card-title grey-text text-darken-4">Microsoft<i class="material-icons right">close</i></span>
@@ -432,9 +436,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <h4 class="col s12 light white-text center">Our Sponsors</h4>
-                <div class="row">
                     <div class="col l6 m12">
                         <div class="card">
                             <div class="card-image waves-effect waves-block waves-light" style="padding: 10px"> <img class="activator" src="assets/tang.png"> </div>
@@ -467,6 +468,14 @@
                             </div>
                         </div>
                     </div>
+                      <div class="col l6 m12">
+                        <div class="card">
+                            <div class="card-image waves-effect waves-block waves-light" style=""> <img class="activator" src="assets/chipotle.jpg"> </div>
+                            <div class="card-reveal"> <span class="card-title grey-text text-darken-4">Chipotle<i class="material-icons right">close</i></span>
+                                <p>Checkout their website <a href="https://chipotle.com/" target="_blank">here</a>.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col l3 m4 s6">
@@ -482,6 +491,14 @@
                             <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="assets/mitlaunch.jpg"> </div>
                             <div class="card-reveal"> <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
                                 <p>Checkout their website <a href="http://mitlaunch.com/" target="_blank">here</a>.</p>
+                            </div>
+                        </div>
+                    </div>
+                        <div class="col l3 m4 s6">
+                        <div class="card">
+                            <div class="card-image waves-effect waves-block waves-light" style="padding: 15px"> <img class="activator" src="assets/sponsrus.jpg"> </div>
+                            <div class="card-reveal"> <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                                <p>Checkout their website <a href="https://sponsr.us/" target="_blank">here</a>.</p>
                             </div>
                         </div>
                     </div>
