--- a/index.html
+++ b/index.html
@@ -462,7 +462,16 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col l6 m12">
+             
+                      <div class="col l6 m12">
+                        <div class="card">
+                            <div class="card-image waves-effect waves-block waves-light" style=""> <img class="activator" src="assets/chipotle.jpg"> </div>
+                            <div class="card-reveal"> <span class="card-title grey-text text-darken-4">Chipotle<i class="material-icons right">close</i></span>
+                                <p>Check out their website <a href="https://chipotle.com/" target="_blank">here</a>.</p>
+                            </div>
+                        </div>
+                    </div>
+                           <div class="col l6 m12">
                         <div class="card">
                             <div class="card-image waves-effect waves-block waves-light" style=""> <img class="activator" src="assets/liberty.jpg"> </div>
                             <div class="card-reveal"> <span class="card-title grey-text text-darken-4">Liberty Mutual<i class="material-icons right">close</i></span>
@@ -470,11 +479,11 @@
                             </div>
                         </div>
                     </div>
-                      <div class="col l6 m12">
+                           <div class="col l6 m12">
                         <div class="card">
-                            <div class="card-image waves-effect waves-block waves-light" style=""> <img class="activator" src="assets/chipotle.jpg"> </div>
-                            <div class="card-reveal"> <span class="card-title grey-text text-darken-4">Chipotle<i class="material-icons right">close</i></span>
-                                <p>Check out their website <a href="https://chipotle.com/" target="_blank">here</a>.</p>
+                            <div class="card-image waves-effect waves-block waves-light" style="padding: 30px"> <img class="activator" src="assets/SIG-color.png"> </div>
+                            <div class="card-reveal"> <span class="card-title grey-text text-darken-4">SIG<i class="material-icons right">close</i></span>
+                                <p>Check out their website <a href="http://sig.com/" target="_blank">here</a>.</p>
                             </div>
                         </div>
                     </div>
