Changed alec pic

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
         <section id="home" class="scrollspy" style="height: 800px">
             <div class="row center"> <img id="hacknehs-logo-img" src="assets/banner-logo.png" style="margin-top: 150px">
                 <h5 class="light white-text">October 8, 2016</h5>
-                <h5 class="light white-text">1 Cambridge Center</h5>
+                <h5 class="light white-text">Microsoft Sales and Technology Center</h5>
+                 <h5 class="light white-text">Burlington, MA</h5>
                 <h5 class="light white-text">200+ Hackers</h5>
                 <br>
                 <br>
@@ -93,21 +94,21 @@
                         <div class="icon-block">
                             <h2 class="center grey-text text-darken-3"><i class="material-icons">code</i></h2>
                             <h5 class="center grey-text text-darken-3">Bring Your Ideas to Life</h5>
-                            <p>If you ever had a great app idea, but never got a chance to implement it, hackNEHS is for you! At hackNEHS, you can create anything from scratch and implement your creative ideas. Most of the hacks will be software based, but if you want to utilize hardware, we will provide basic hardware, or feel free to bring in your own. Regardless, come hack with us to create something awesome!</p>
+                            <p>If you ever had a great app idea, but never got a chance to implement it, hackNEHS is for you! At hackNEHS, you can create <b class="orange-text">anything</b> from scratch and implement your creative ideas. Most of the hacks will be <b class="orange-text">software based</b>, but if you want to utilize hardware, we will provide basic hardware, or feel free to bring in your own. Regardless, come hack with us to <b class="orange-text">create something awesome!</b></p>
                         </div>
                     </div>
                     <div class="col s12 m6 l4">
                         <div class="icon-block">
                             <h2 class="center grey-text text-darken-3"><i class="material-icons">group</i></h2>
                             <h5 class="center grey-text text-darken-3">All High-Schoolers Are Welcome</h5>
-                            <p>No prior experience is necessary to come to hackNEHS, so grab your friends, classmates, and fellow hackers! Coming to a hackathon is a great place for new coders to learn the basics. We will provide workshops for beginners to get hands-on experience with app development, web development, and idea generation from experience mentors. </p>
+                            <p><b class="orange-text">No prior experience is necessary</b> to come to hackNEHS, so grab your friends, classmates, and fellow hackers! Coming to a hackathon is a great place for new coders to learn the basics. We will provide <b class="orange-text">workshops</b> for beginners to get hands-on experience with app development, web development, and idea generation from experience mentors. </p>
                         </div>
                     </div>
                     <div class="col s12 m12 l4">
                         <div class="icon-block">
                             <h2 class="center grey-text text-darken-3"><i class="material-icons">gamepad</i></h2>
                             <h5 class="center grey-text text-darken-3">Win Fabulous Prizes</h5>
-                            <p>hackNEHS is a competition where teams work together to build amazing software using many tools, APIs, and products. At the end of the event, judges will provide feedback and prizes to the best hacks, which could possibly include cool drones, arduino kits, and other hot technolgies of the modern era. However, everyone is a winner, and we will pass out wonderful goodies and t-shirts to everyone who participates.</p>
+                            <p>hackNEHS is a competition where teams work together to build amazing software using many tools, APIs, and products. At the end of the event, <b class="orange-text">judges</b> will provide feedback and prizes to the best hacks, which could include <b class="orange-text">cool drones, arduino kits, smart watches, fun Sphero SPRKs, grants to further develop your ideas</b>, and other hot technolgies of the modern era. However, everyone is a winner, and we will pass out <b class="orange-text">SWAG and t-shirts</b> to everyone who participates.</p>
                         </div>
                     </div>
                 </div>
@@ -132,13 +133,13 @@
                         <li>
                             <div class="collapsible-header"><i class="material-icons">place</i>Where</div>
                             <div class="collapsible-body">
-                                <p class="grey-text text-darken-3">1 Cambridge Center, Cambridge, MA<a href="https://goo.gl/maps/qgCVmd7kmXn" target="_blank" class="right">Google Maps</a></p>
+                                <p class="grey-text text-darken-3">5 Wayside Road, Burlington MA, 01803<br /> Microsoft Burlington is an exciting new facility with leading edge meeting space to enhance the showcasing of ideas and products. Rooms are equipped with the latest audio visual service.<a href="https://goo.gl/maps/NBaCEdnb5232" target="_blank" class="right">Google Maps</a></p>
                             </div>
                         </li>
                         <li>
                             <div class="collapsible-header"><i class="material-icons">access_time</i>When</div>
                             <div class="collapsible-body">
-                                <p class="grey-text text-darken-3">October 8, 2016 - 7:30 AM to 10:00 PM</p>
+                                <p class="grey-text text-darken-3">October 8, 2016 - 7:30 AM to 8:30 PM</p>
                             </div>
                         </li>
                     </ul>
@@ -206,7 +207,7 @@
                     <div class="col-sm-12 col-md-6 col-lg-6">
                         <div class="card blue-grey hoverable">
                             <div class="card-content white-text"> <span class="card-title orange-text">How will I get there?</span>
-                                <p>Find some friends to drive or carpool with! You can also take public transportation to the Kendall/MIT stop on the Red Line.<a href="https://goo.gl/maps/qgCVmd7kmXn" target="_blank" class="right">Google Maps</a></p>
+                                <p>Find some friends to drive or carpool with! Our <a href="https://goo.gl/maps/NBaCEdnb5232" target="_blank"> venue </a> is conveniently right off the highway, next to big malls such as Burlington mall.</p>
                             </div>
                         </div>
                     </div>
