added 1517 and the nest

--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
                     <li class="light"><a href="#sponsors">Sponsors</a></li>
                     <li class="light"><a href="#team">Team</a></li>
                 </ul>
-        
                 <ul id="myNavbarRight" class="right">
                     <li><a class="light" href="mailto:info@hacknehs.com"><i class="fa fa-envelope fa-2x"></i></a></li>
                     <li class="light"><a target="_blank" href="https://www.facebook.com/hacknehs/"><i class="fa fa-facebook-official fa-2x"></i></a></li>
@@ -64,7 +63,7 @@
                     <li class="light"><a target="_blank" href="https://twitter.com/hackNEHS"><i class="fa fa-twitter"></i> Twitter</a></li>
                     <li class="light"><a target="_blank" href="https://www.instagram.com/hacknehs/"><i class="fa fa-instagram"></i> Instagram</a></li>
                     <li class="light"><a target="_blank" href="https://medium.com/hacknehs"><i class="fa fa-medium" aria-hidden="true"></i> Medium</a></li>
-                        <li class="light"> </li>
+                    <li class="light"> </li>
                 </ul>
             </div>
         </nav>
@@ -75,7 +74,7 @@
             <div class="row center"> <img id="hacknehs-logo-img" src="assets/banner-logo.png" style="margin-top: 150px">
                 <h5 class="light white-text">October 8, 2016</h5>
                 <h5 class="light white-text">Microsoft Sales and Technology Center</h5>
-                 <h5 class="light white-text">Burlington, MA</h5>
+                <h5 class="light white-text">Burlington, MA</h5>
                 <h5 class="light white-text">200+ Hackers</h5>
                 <br>
                 <br>
@@ -133,7 +132,8 @@
                         <li>
                             <div class="collapsible-header"><i class="material-icons">place</i>Where</div>
                             <div class="collapsible-body">
-                                <p class="grey-text text-darken-3">5 Wayside Road, Burlington MA, 01803<br /> Microsoft Burlington is an exciting new facility with leading edge meeting space to enhance the showcasing of ideas and products. Rooms are equipped with the latest audio visual service.<a href="https://goo.gl/maps/NBaCEdnb5232" target="_blank" class="right">Google Maps</a></p>
+                                <p class="grey-text text-darken-3">5 Wayside Road, Burlington MA, 01803
+                                    <br /> Microsoft Burlington is an exciting new facility with leading edge meeting space to enhance the showcasing of ideas and products. Rooms are equipped with the latest audio visual service.<a href="https://goo.gl/maps/NBaCEdnb5232" target="_blank" class="right">Google Maps</a></p>
                             </div>
                         </li>
                         <li>
@@ -304,7 +304,23 @@
                                     <p>9:00 AM - 7:00 PM</p>
                                 </td>
                                 <td>
-                                    <p> Hacking period with workshops and breaks for lunch, dinner, snacks, and drinks</p>
+                                    <p> Hacking period with breaks for lunch, dinner, snacks, and drinks</p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <p>9:15 AM - 10:30 AM</p>
+                                </td>
+                                <td>
+                                    <p> Workshop Session A</p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <p>10:45 AM - 12:00 PM</p>
+                                </td>
+                                <td>
+                                    <p> Workshop Session B</p>
                                 </td>
                             </tr>
                             <tr>
@@ -521,6 +537,30 @@
                             <div class="card-image waves-effect waves-block waves-light" style="padding: 15px"> <img class="activator" src="assets/sphero.jpg"> </div>
                             <div class="card-reveal"> <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
                                 <p>Check out their website <a href="http://www.sphero.com/" target="_blank">here</a>.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col l3 m4 s6">
+                        <div class="card">
+                            <div class="card-image waves-effect waves-block waves-light" style="padding: 15px"> <img class="activator" src="assets/insomnia.jpg"> </div>
+                            <div class="card-reveal"> <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                                <p>Check out their website <a href="https://insomniacookies.com/" target="_blank">here</a>.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col l3 m4 s6">
+                        <div class="card">
+                            <div class="card-image waves-effect waves-block waves-light" style="padding: 15px"> <img class="activator" src="assets/nest.png"> </div>
+                            <div class="card-reveal"> <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                                <p>Check out their website <a href="http://www.noblenet.org/owhl/" target="_blank">here</a>.</p>
+                            </div>
+                        </div>
+                    </div>
+                          <div class="col l3 m4 s6">
+                        <div class="card">
+                            <div class="card-image waves-effect waves-block waves-light" style=""> <img class="activator" src="assets/1517.jpg"> </div>
+                            <div class="card-reveal"> <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                                <p>Check out their website <a href="http://www.1517fund.com/" target="_blank">here</a>.</p>
                             </div>
                         </div>
                     </div>
