Added meta properties

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta property="og:image" content="http://hacknehs.com/assets/banner.png" />
+    <meta property="og:description" content="We are running the most exciting hackathon in the New England area for high school students. It will be a day of developing cool ideas, meeting other high school hackers, and learning the ins and outs of development." />
+    <meta property="og:url" content="http://www.hacknehs.com/" />
+    <meta property="og:title" content="hackNEHS | Hack New England High Schools" />
     <title> hackNEHS | Hack New England High Schools </title>
     <link rel='shortcut icon' href='assets/favicon.ico' type='image/x-icon' />
     <link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
@@ -556,7 +560,7 @@
                             </div>
                         </div>
                     </div>
-                          <div class="col l3 m4 s6">
+                    <div class="col l3 m4 s6">
                         <div class="card">
                             <div class="card-image waves-effect waves-block waves-light" style=""> <img class="activator" src="assets/1517.jpg"> </div>
                             <div class="card-reveal"> <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
