--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                             </div>
                         </div>
                     </div>
-                        <div class="col s12 m12 l6">
+                    <div class="col s12 m12 l6">
                         <div class="card-panel grey lighten-5 z-depth-1">
                             <div class="row valign-wrapper">
                                 <div class="col s4"> <img src="assets/eric.jpg" alt="" class="circle responsive-img"> </div>
@@ -359,7 +359,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div> 
+                    </div>
                 </div>
             </div>
         </section>
@@ -540,6 +540,14 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col l6 m12">
+                        <div class="card">
+                            <div class="card-image waves-effect waves-block waves-light" style="padding: 30px"> <img class="activator" src="assets/catapult.png"> </div>
+                            <div class="card-reveal"> <span class="card-title grey-text text-darken-4">Catapult<i class="material-icons right">close</i></span>
+                                <p>Check out their website <a href="http://www.catapultideas.com/" target="_blank">here</a>.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col l3 m4 s6">
@@ -595,6 +603,22 @@
                             <div class="card-image waves-effect waves-block waves-light" style=""> <img class="activator" src="assets/stickeryou.gif"> </div>
                             <div class="card-reveal"> <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
                                 <p>Check out their website <a href="http://www.stickeryou.com/2" target="_blank">here</a>.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col l3 m4 s6">
+                        <div class="card">
+                            <div class="card-image waves-effect waves-block waves-light" style=""> <img class="activator" src="assets/tim-logo.png"> </div>
+                            <div class="card-reveal"> <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                                <p>Check out their website <a href="http://www.creative-tim.com/" target="_blank">here</a>.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col l3 m4 s6">
+                        <div class="card">
+                            <div class="card-image waves-effect waves-block waves-light" style=""> <img class="activator" src="assets/canvas.png"> </div>
+                            <div class="card-reveal"> <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                                <p>Check out their website <a href="https://www.instructure.com/" target="_blank">here</a>.</p>
                             </div>
                         </div>
                     </div>
